# e-business_backend

./: .dockerignore  .gitignore  .gitlab-ci.yml  Dockerfile  README.md  pyproject.toml
d3fender/: __init__.py  cli.py  input_template.json
d3fender/IO/: Input.py  Output.py  __init__.py
d3fender/NLP/: SentenceTransformer.py  __init__.py
d3fender/api/: main.py
d3fender/assessors/: __init__.py  mainAssessor.py
d3fender/data_loaders/: __init__.py  d3fend.json  import_attack.py  import_d3fend.py  import_data.py
d3fender/database/: __init__.py  db.py  db_queries.py  db_schema.py
d3fender/input/: __init__.py  inputParser.py  registry_loader.py
d3fender/models/: __init__.py  attackModels.py  defendModels.py
d3fender/resources/: capabilities.json  controls.json  mitre.db
d3fender/rules/: Finding.py  __init__.py  baseRules.py  ruleClass.py  ruleEvaluator.py
d3fender/sbom_analysis/: __init__.py  osv_handlers.py  sbom_analyzer.py  sbom_io.py  sbom_models.py  sbom_parser.py
docs/MITRE/: ATTACK_doc.md  D3FEND_doc.md
docs/practical_resources/: links.txt
tests/: __init__.py  test_generic.py
tests/Assessor_Tests/: test_Assessor.py
tests/CLI_Tests/: test_cli.py
tests/Database_Tests/: test_ATTACK_import.py  test_D3FEND_import.py  test_db.py  test_dbQueries.py  test_tableCreation.py
tests/IO_Tests/: __init__.py  test_output.py
tests/InputParser_Tests/: test_capabilities.py  test_inputJSON.py
tests/NLP_Tests/: test_sentence_transformer.py
tests/Rules_Tests/: test_rules.py
tests/mockData/: attackMock.json  capabilities_MOCK.json  inputMockData.json  (+1 more)
